fdo#82818 vcl macosx. fix asian vertical ctlayout

Just revert ot regular CTRunDraw in that case
and adjust 'ullet' displaying.

Change-Id: I9ef80f5985b8c7610fcc8e9e8acd5b27542f8730